Increase wave animation height to prevent cutoff

--- a/src/index.css
+++ b/src/index.css
@@ -519,7 +519,7 @@ body {
 
 .fluid-simulation {
   width: 100%;
-  height: 80px;
+  height: 120px;
   display: block;
 }
 
